[gd_scene load_steps=2 format=2]

[ext_resource path="res://oxygen_manager/OxygenManager.gd" type="Script" id=1]

[node name="OxygenManager" type="Node2D"]
script = ExtResource( 1 )

[node name="ArmLeft" type="Position2D" parent="."]
position = Vector2( -256, -160 )

[node name="ArmRight" type="Position2D" parent="."]
position = Vector2( 256, -160 )

[node name="LegLeft" type="Position2D" parent="."]
position = Vector2( -144, 312 )

[node name="LegRight" type="Position2D" parent="."]
position = Vector2( 144, 312 )

[node name="Tween" type="Tween" parent="."]
